# pdf-semiauto-bookmark

./: README.md  pyproject.toml
pdf_semiauto_bookmark/: cli.py  format_bookmark.py  parse_bookmark.py  pdf_to_bookmark_md.py  set_bookmark.py  summarize_bookmark.py
